# chatgpt-prompt-engineering

./: .gitignore  README.md  pyproject.toml
notebooks/: l2-guidelines.ipynb  l3-iterative-prompt-development.ipynb  l4-summarizing.ipynb  l5-inferring.ipynb  l6-transforming.ipynb  l7-expanding.ipynb  l8-chatbot.ipynb
src/: completion.py
